@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+    61: AstroFloyd, 08/02/2010
+     - plotplt: fixed bug in and enhanced Kippenhahn diagram
+    
     60: AstroFloyd, 02/02/2010
       - plotpltn:
         - moved label definition to subroutine set_plotpltn_labels in functions.f
